# mmServer

./: CMakeLists.txt  config.ini  main.cpp
back/: sms.c  sms.cpp  sms.h
body/: CMakeLists.txt  Logic.cpp  Logic.h  Master.h
body/database/: CMakeLists.txt  basedata.cpp  basedata.h  helpmain.cpp  helpmain.h  include_db.h  messagelist.cpp  messagelist.h  users.cpp  users.h  verifycode.cpp  verifycode.h
body/world/: Check.cpp  Format.cpp  Main.cpp  Operation.cpp  SDepend.cpp  SDepend.h  Serverreturn.cpp  WorldFunction.cpp  table_include.h
framework/: AlgorithmHash.cpp  AlgorithmHash.h  XPcurl.cpp  XPhttp.cpp  XPmysql.h  XPmysqlholter.cpp  XPmysqlholter.h  XPmysqlmessage.cpp  XPmysqlmessage.h  XPsocket.cpp
tools/: sms.cpp  sms.h
